RESOLVED FIXED305291
REGRESSION(300777@main): [iOS] Use after free in WTR::TestController::didReceiveScriptMessage()
https://bugs.webkit.org/show_bug.cgi?id=305291
Summary REGRESSION(300777@main): [iOS] Use after free in WTR::TestController::didRece...
David Kilzer (:ddkilzer)
Reported 2026-01-11 08:46:52 PST
Use after free in WTR::TestController::didReceiveScriptMessage() since 300777@main. Causes crashes when running tests under ASAN. Only affects iOS.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-11 08:48:32 PST
David Kilzer (:ddkilzer)
Comment 2 2026-01-11 08:50:46 PST
EWS
Comment 3 2026-01-11 13:48:19 PST
Committed 305430@main (ba10f958479c): <https://commits.webkit.org/305430@main> Reviewed commits have been landed. Closing PR #56420 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.