REGRESSION(300777@main): [iOS] Use after free in WTR::TestController::didReceiveScriptMessage() <https://bugs.webkit.org/show_bug.cgi?id=305291> <rdar://167941831>

Reviewed by Darin Adler and Geoffrey Garen.

The code was storing the result of `utf8().data()` in a local variable
and using it later on. This was a use-after-free since the pointer
returned by `data()` pointed to memory owned by the temporary CString
returned by `utf8()`.

* Tools/WebKitTestRunner/TestController.cpp:

Canonical link: https://commits.webkit.org/305430@main